# N2V_FG

./: .gitignore  README.md  pyproject.toml
src/n2v_fg/: apply.py  dataset.py  net.py  training.py  unet.py
tests/: test_dataset.py  test_net.py  test_unet.py
